// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`All props 1`] = `
<div>
  <div
    class="tr__form-input-radio-group-container _input-proxy"
  >
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test1"
        name="RadioWidgetId"
        type="radio"
        value="test1"
      />
      <label
        for="RadioWidgetId_test1"
      >
        <span>
          something:test1
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container checked"
    >
      <input
        autocomplete="none"
        checked=""
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test2"
        name="RadioWidgetId"
        type="radio"
        value="test2"
      />
      <label
        for="RadioWidgetId_test2"
      >
        <span>
          something:test2
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test3"
        name="RadioWidgetId"
        type="radio"
        value="test3"
      />
      <label
        for="RadioWidgetId_test3"
      >
        <span>
          something:test3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Boolean choices 1`] = `
<div>
  <div
    class="tr__form-input-radio-group-container _input-proxy"
  >
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_true"
        name="RadioWidgetId"
        type="radio"
        value="true"
      />
      <label
        for="RadioWidgetId_true"
      >
        <span>
          true
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container checked"
    >
      <input
        autocomplete="none"
        checked=""
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_false"
        name="RadioWidgetId"
        type="radio"
        value="false"
      />
      <label
        for="RadioWidgetId_false"
      >
        <span>
          false
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Default props 1`] = `
<div>
  <div
    class="tr__form-input-radio-group-container _input-proxy"
  />
</div>
`;

exports[`Disabled 1`] = `
<div>
  <div
    class="tr__form-input-radio-group-container _input-proxy"
  >
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        disabled=""
        id="RadioWidgetId_test1"
        name="RadioWidgetId"
        type="radio"
        value="test1"
      />
      <label
        for="RadioWidgetId_test1"
      >
        <span>
          test1
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container checked"
    >
      <input
        autocomplete="none"
        checked=""
        class="tr__form-input-radio apptr__input _input-radio"
        disabled=""
        id="RadioWidgetId_test2"
        name="RadioWidgetId"
        type="radio"
        value="test2"
      />
      <label
        for="RadioWidgetId_test2"
      >
        <span>
          test2
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        disabled=""
        id="RadioWidgetId_test3"
        name="RadioWidgetId"
        type="radio"
        value="test3"
      />
      <label
        for="RadioWidgetId_test3"
      >
        <span>
          test3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`On same line 1`] = `
<div>
  <div
    class="tr__form-input-radio-group-container _input-proxy"
  >
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test1"
        name="RadioWidgetId"
        type="radio"
        value="test1"
      />
      <label
        for="RadioWidgetId_test1"
      >
        <span>
          test1
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test2"
        name="RadioWidgetId"
        type="radio"
        value="test2"
      />
      <label
        for="RadioWidgetId_test2"
      >
        <span>
          test2
        </span>
      </label>
    </div>
    <div
      class="tr__form-input-radio-container"
    >
      <input
        autocomplete="none"
        class="tr__form-input-radio apptr__input _input-radio"
        id="RadioWidgetId_test3"
        name="RadioWidgetId"
        type="radio"
        value="test3"
      />
      <label
        for="RadioWidgetId_test3"
      >
        <span>
          test3
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`On same line 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="tr__form-input-radio-group-container _input-proxy"
      >
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test1"
            name="RadioWidgetId"
            type="radio"
            value="test1"
          />
          <label
            for="RadioWidgetId_test1"
          >
            <span>
              test1
            </span>
          </label>
        </div>
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test2"
            name="RadioWidgetId"
            type="radio"
            value="test2"
          />
          <label
            for="RadioWidgetId_test2"
          >
            <span>
              test2
            </span>
          </label>
        </div>
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test3"
            name="RadioWidgetId"
            type="radio"
            value="test3"
          />
          <label
            for="RadioWidgetId_test3"
          >
            <span>
              test3
            </span>
          </label>
        </div>
      </div>
    </div>
    <div>
      <div
        class="tr__form-input-radio-group-container _input-proxy no-wrap"
      >
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test1"
            name="RadioWidgetId"
            type="radio"
            value="test1"
          />
          <label
            for="RadioWidgetId_test1"
          >
            <span>
              test1
            </span>
          </label>
        </div>
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test2"
            name="RadioWidgetId"
            type="radio"
            value="test2"
          />
          <label
            for="RadioWidgetId_test2"
          >
            <span>
              test2
            </span>
          </label>
        </div>
        <div
          class="tr__form-input-radio-container"
        >
          <input
            autocomplete="none"
            class="tr__form-input-radio apptr__input _input-radio"
            id="RadioWidgetId_test3"
            name="RadioWidgetId"
            type="radio"
            value="test3"
          />
          <label
            for="RadioWidgetId_test3"
          >
            <span>
              test3
            </span>
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="tr__form-input-radio-group-container _input-proxy no-wrap"
    >
      <div
        class="tr__form-input-radio-container"
      >
        <input
          autocomplete="none"
          class="tr__form-input-radio apptr__input _input-radio"
          id="RadioWidgetId_test1"
          name="RadioWidgetId"
          type="radio"
          value="test1"
        />
        <label
          for="RadioWidgetId_test1"
        >
          <span>
            test1
          </span>
        </label>
      </div>
      <div
        class="tr__form-input-radio-container"
      >
        <input
          autocomplete="none"
          class="tr__form-input-radio apptr__input _input-radio"
          id="RadioWidgetId_test2"
          name="RadioWidgetId"
          type="radio"
          value="test2"
        />
        <label
          for="RadioWidgetId_test2"
        >
          <span>
            test2
          </span>
        </label>
      </div>
      <div
        class="tr__form-input-radio-container"
      >
        <input
          autocomplete="none"
          class="tr__form-input-radio apptr__input _input-radio"
          id="RadioWidgetId_test3"
          name="RadioWidgetId"
          type="radio"
          value="test3"
        />
        <label
          for="RadioWidgetId_test3"
        >
          <span>
            test3
          </span>
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
